--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -897,7 +897,6 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #3e3f3a;
-  background-color: #ffffff;
 }
 input,
 button,
@@ -1397,16 +1396,16 @@ pre code {
     width: 750px;
   }
 }
-@media (min-width: 992px) {
+/*@media (min-width: 992px) {
   .container {
     width: 970px;
   }
-}
-@media (min-width: 1200px) {
+}*/
+/*@media (min-width: 1200px) {
   .container {
     width: 1170px;
   }
-}
+}*/
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
