--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html.login
   %head
     %title JARVIS
     <!--[if IE]><script scr="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
@@ -10,8 +10,18 @@
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
   %body
     %nav.navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
+      .navbar-header
+        %button.navbar-toggle.collapsed{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
+          %span.sr-only
+          %span.icon-bar
+          %span.icon-bar
+          %span.icon-bar
+        %a.navbar-brand{href: ""}= image_tag("jarvis.png")
+      .collapse.navbar-collapse
+        %ul.nav.navbar-nav.navbar-right{style: "margin-right:20px;"}
+          %li= link_to t('views.sign_up'), signup_path, remote: true
     .container
-      .col-md-4.col-md-offset-4
+      .col-lg-4.col-lg-offset-4
         = yield
 
     .container{style:  "position:fixed; top:70px; right:0px; width:20%;"}
