background fix for mobile

--- a/app/views/families/my_family.html.haml
+++ b/app/views/families/my_family.html.haml
@@ -19,7 +19,7 @@
     $('#id').val(x);
   }
 
-.lead{align: "center"}
+.lead.well.well-sm{align: "center"}
   = t('views.blank_family', family: @family.name)
 
 .well.well-sm{align: "center"}
