--- a/app/views/layouts/my_family.html.haml
+++ b/app/views/layouts/my_family.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html.login
   %head
     %title JARVIS
     <!--[if IE]><script scr="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
