--- a/app/views/families/show.html.haml
+++ b/app/views/families/show.html.haml
@@ -1,19 +1,16 @@
-%div{align: "center"}
-  %table.table
-    %tr
-      %td.col-md-2{rowspan: "2"}
-        = image_tag(gravatar_for(@family), class: "img-rounded")
-      %td
-        .lead
-          .pull-right
-            = link_to " #{t('views.link')}", @access_url, class: "glyphicon glyphicon-new-window btn btn-default"
-            -if current_user.parent?
-              =link_to "", multi_families_path(id: @family.id), remote: true, class: "glyphicon glyphicon-cog btn btn-default"
-          = t('views.blank_family', family: @family.name)
-    %tr
-      %td
+.col-lg-12
+  .panel.panel-default
+    .panel-heading
+      %h4
+        .pull-right
+          = link_to " #{t('views.link')}", @access_url, class: "glyphicon glyphicon-new-window btn btn-default btn-sm"
+          -if current_user.parent?
+            =link_to "", multi_families_path(id: @family.id), remote: true, class: "glyphicon glyphicon-cog btn btn-default btn-sm"
+        = t('views.blank_family', family: @family.name)
+    .panel-body
+      = image_tag(gravatar_for(@family), class: "img-rounded")
 
--@family.users.each do |user|
-  =render partial: 'card', locals: { user: user }
+  -@family.users.each do |user|
+    =render partial: 'card', locals: { user: user }
 
-= render partial: 'users/tasks', locals: { family: @family, user: @current_user, tasks: @family.todays_tasks, section: t('views.tasks') }
+  = render partial: 'users/tasks', locals: { family: @family, user: @current_user, tasks: @family.todays_tasks, section: t('views.tasks') }
