--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,22 +1,21 @@
-%div{align: "center"}
-  %table.table
-    %tr
-      %td.col-md-2{rowspan: "2"}
-        = image_tag(gravatar_for(@user), class: "img-rounded")
-      %td
-        .lead
-          .pull-right
-            -if @user.parent?
-              .label.label-primary= t('views.parent')
-            -else
-              .label.label-success{id: "credits"}
-                = "#{@user.credits || "0"} #{t('views.credits')}"
-          = @user.name
-    %tr
-      %td
+.col-lg-12
+  .panel.panel-default
+    .panel-heading
+      %h4
+        .pull-right
+          -if @user.parent?
+            .label.label-primary= t('views.parent')
+          -else
+            .label.label-success{id: "credits"}
+              = "#{@user.credits || "0"} #{t('views.credits')}"
+        = @user.name
+    .panel-body
+      = image_tag(gravatar_for(@user), class: "img-rounded")
+      .pull-right
         -if @user.social_medium.any?
           -@user.social_medium.each do |feed|
             = link_to image_tag("#{SocialMedia::TYPE_NAME[feed.feed_type].downcase}.png", size: "40x40"), user_social_medium_path(@user, feed), remote: true
-= render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.todays_tasks, section: t('views.my_tasks') }
--if @user.family
-  = render partial: 'tasks', locals: { family: @user.family, user: @user, tasks: @user.family.todays_tasks, section: t('views.family_tasks') }
+
+  = render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.todays_tasks, section: t('views.my_tasks') }
+  -if @user.family
+    = render partial: 'tasks', locals: { family: @user.family, user: @user, tasks: @user.family.todays_tasks, section: t('views.family_tasks') }
