--- a/app/views/families/_multi.html.haml
+++ b/app/views/families/_multi.html.haml
@@ -7,7 +7,7 @@
   %li.active
     %a{"data-toggle" => "tab", :href => "#task", :role => "tab"}= t('views.add_task')
   %li
-    %a{"data-toggle" => "tab", :href => "#edit", :role => "tab"}= t('views.edit_family')
+    %a{"data-toggle" => "tab", :href => "#edit", :role => "tab"}= t('views.edit')
   %li
     %a{"data-toggle" => "tab", :href => "#member", :role => "tab"}= t('views.add_family_member')
 
