--- a/app/views/families/_card.html.haml
+++ b/app/views/families/_card.html.haml
@@ -1,23 +1,27 @@
-%div.well.well-sm
-  %table{width: "100%"}
-    %tr
-      %td.col-md-2{rowspan: "2"}
-        =link_to image_tag(gravatar_for(user), class: "img-rounded"), user_path(user)
-      %td
-        .lead
-          .pull-right
-            -if user.parent?
-              .label.label-primary= t('views.parent')
-            -else
-              .label.label-success{id: "credits"}
-                = "#{user.credits || 0} #{t('views.credits')}"
-          = link_to user.name, user_path(user)
-    %tr
-      %td
-        .pull-right
-          -if current_user.parent?
-            =link_to "", multi_users_path(id: user.id), remote: true, class: "glyphicon glyphicon-cog btn btn-default btn-sm"
-        - progress = user.task_progress
-        %div{style: "margin-right:60px;"}
-          .progress
-            .progress-bar{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "#{progress}", :role => "progressbar", :style => "width: #{progress}%;"}
+.col-lg-6
+  %div.well.well-sm
+    %table{width: "100%"}
+      %tr
+        %td.col-md-2{rowspan: "2"}
+          =link_to image_tag(gravatar_for(user), class: "img-rounded"), user_path(user)
+        %td
+          .lead
+            .pull-right
+              -if user.parent?
+                .label.label-primary= t('views.parent')
+              -else
+                .label.label-success{id: "credits"}
+                  = number_to_currency("#{user.credits || "0"}")
+              -if current_user.parent?
+                %span{style: "padding-left:10px;"}
+                  =link_to "", multi_users_path(id: user.id), remote: true, class: "glyphicon glyphicon-cog btn btn-default btn-sm"
+            = link_to user.name, user_path(user)
+      %tr
+        %td
+          - p = user.task_progress
+          - wp = user.weekly_task_progress
+          %h4
+            .label{class: p[0] == p[1] ? "label-success" : "label-default"}= "Today #{p[0]}/#{p[1]}"
+            .label{class: wp[0] == wp[1] ? "label-success" : "label-default"}= "Weekly #{wp[0]}/#{wp[1]}"
+
+            
