--- a/app/views/families/_card_m.html.haml
+++ b/app/views/families/_card_m.html.haml
@@ -17,8 +17,14 @@
       %td{colspan: "2"}
         - p = user.task_progress
         - wp = user.weekly_task_progress
-        .label{class: p[0] == p[1] ? "label-success" : "label-default"}= "Today #{p[0]}/#{p[1]}"
-        .label{class: wp[0] == wp[1] ? "label-success" : "label-default"}= "Weekly #{wp[0]}/#{wp[1]}"
-        .pull-right
-          -if current_user.parent?
-            =link_to "", multi_users_path(id: user.id), remote: true, class: "glyphicon glyphicon-cog btn btn-default btn-sm"
+        -if user.child?
+          .label{class: p[0] == p[1] ? "label-success" : "label-default"}= "Today #{p[0]}/#{p[1]}"
+          .label{class: wp[0] == wp[1] ? "label-success" : "label-default"}= "Weekly #{wp[0]}/#{wp[1]}"
+          .pull-right
+            -if current_user.parent?
+              -if wp[0] == wp[1] && (user.last_allowance.blank? || user.last_allowance < Date.today.beginning_of_week)
+                = link_to t('number.currency.format.unit'), allowance_users_path(id: user.id), class: "label label-success"
+              =link_to "", multi_users_path(id: user.id), remote: true, class: "glyphicon glyphicon-cog btn btn-default btn-sm"
+        - else
+          .label.label-default= "Today #{p[0]}/#{p[1]}"
+          .label.label-default= "Weekly #{wp[0]}/#{wp[1]}"
