--- a/app/views/families/show.html.haml
+++ b/app/views/families/show.html.haml
@@ -14,4 +14,6 @@
   =render partial: 'card', locals: { user: user }
 
 .col-lg-12
-  = render partial: 'users/tasks', locals: { family: @family, user: @current_user, tasks: @family.todays_tasks, section: t('views.tasks') }
+  = render partial: 'users/tasks', locals: { family: @family, user: @current_user, tasks: @family.todays_tasks, section: t('views.todays_tasks') }
+  -if current_user.parent?
+    = render partial: 'users/tasks', locals: { family: @family, user: @current_user, tasks: @family.other_tasks, section: t('views.other_tasks') }
