--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,7 +7,7 @@
             .label.label-primary= t('views.parent')
           -else
             .label.label-success{id: "credits"}
-              = number_to_currency("#{@user.credits || "0"}")
+              = number_to_currency(@user.credits || 0)
         = @user.name
     .panel-body
       = image_tag(gravatar_for(@user), class: "img-rounded")
@@ -16,6 +16,12 @@
           -@user.social_medium.each do |feed|
             = link_to content_tag(:i,nil, class: "fa fa-#{SocialMedia::TYPE_NAME[feed.feed_type].downcase} fa-3x"), user_social_medium_path(@user, feed), remote: true, class: "btn btn-sm btn-#{SocialMedia::TYPE_NAME[feed.feed_type].downcase}"
 
-  = render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.todays_tasks, section: t('views.my_tasks') }
-  -if @user.family
+.col-lg-6
+  = render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.todays_tasks.order('required').reverse, section: t('views.todays_tasks') }
+  -if current_user.parent?
+    = render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.other_tasks, section: t('views.other_tasks') }
+-if @user.family
+  .col-lg-6
     = render partial: 'tasks', locals: { family: @user.family, user: @user, tasks: @user.family.todays_tasks, section: t('views.family_tasks') }
+    -if current_user.parent?
+      = render partial: 'tasks', locals: { family: @user.family, user: @user, tasks: @user.family.other_tasks, section: t('views.other_family_tasks') }
