--- a/app/views/users/show_m.html.haml
+++ b/app/views/users/show_m.html.haml
@@ -15,6 +15,12 @@
         -@user.social_medium.each do |feed|
           = link_to content_tag(:i,nil, class: "fa fa-#{SocialMedia::TYPE_NAME[feed.feed_type].downcase} fa-2x"), user_social_medium_path(@user, feed), remote: true, class: "btn btn-sm btn-#{SocialMedia::TYPE_NAME[feed.feed_type].downcase}"
 
-= render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.todays_tasks, section: t('views.my_tasks') }
+
+= render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.todays_tasks.order('required').reverse, section: t('views.todays_tasks') }
+-if current_user.parent?
+  = render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.other_tasks, section: t('views.other_tasks') }
 -if @user.family
+
   = render partial: 'tasks', locals: { family: @user.family, user: @user, tasks: @user.family.todays_tasks, section: t('views.family_tasks') }
+  -if current_user.parent?
+    = render partial: 'tasks', locals: { family: @user.family, user: @user, tasks: @user.family.other_tasks, section: t('views.other_family_tasks') }
